tests/ui/wrapper/fail/non-dyn-traits-not-allowed.stderr
error: Macro accepts only form of `type Trait1and2Ref = dyn Trait1 + Trait2`
 --> tests/ui/wrapper/fail/non-dyn-traits-not-allowed.rs:7:1
  |
7 | #[openbrush::wrapper]
  | ^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `openbrush::wrapper` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0782]: trait objects must include the `dyn` keyword
  --> tests/ui/wrapper/fail/non-dyn-traits-not-allowed.rs:18:1
   |
18 | #[openbrush::wrapper]
   | ^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `openbrush::wrapper` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0433]: failed to resolve: use of undeclared type `Trait1Ref`
  --> tests/ui/wrapper/fail/non-dyn-traits-not-allowed.rs:14:9
   |
14 |         Trait1Ref::foo(&callee)
   |         ^^^^^^^^^
   |         |
   |         use of undeclared type `Trait1Ref`
   |         help: a trait with a similar name exists: `Trait1`